update links and text

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   <hr>
   <br>
   <h2>Data</h2>
-  <p>Notes sourced from the <a href="http://www.joyceproject.com/">Joyce Project</a>.</p>
+  <p>Notes sourced from the <a href="http://www.joyceproject.com/">Joyce Project</a>. Thank you for all your effort revitalizing this classic.</p>
   <br>
   <hr>
   <br>
-  <a href="https://github.com/justinkraus/si_meta/tree/master/topics"><h2>Code and Methodology</h2></a>
+  <a href="https://github.com/justinkraus/joyce"><h2>Code and Methodology</h2></a>
     <!-- <img src="./images/legendsi2.svg"> -->
   <!-- <img src="./images/UlyssesConnected.png"> -->
 <div id="legend">
