update links and text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <hr>
   <br>
   <h2>Data</h2>
-  <p>Notes sourced from the <a href="http://www.joyceproject.com/">Joyce Project</a>. Thank you for all your effort revitalizing this classic.</p>
+  <p>Tremendous acknowledgement and thank you to the <a href="http://www.joyceproject.com/">Joyce Project</a>, the source for these notes. Your efforts revitalizing this classic are appreciated.</p>
   <br>
   <hr>
   <br>
